<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_margin="@dimen/px_10.0_dp"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="@dimen/px_15.0_dp"
        app:cardBackgroundColor="@android:color/holo_orange_light"
        app:cardElevation="@dimen/px_4.0_dp">
        <FrameLayout
            android:layout_width="match_parent"
            android:background="@android:color/transparent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center|start"
                android:gravity="center|start"
                android:weightSum="1"
                android:layout_marginVertical="@dimen/px_5.0_dp"
                android:layout_marginHorizontal="@dimen/px_10.0_dp"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:cardCornerRadius="@dimen/px_15.0_dp"
                    app:cardBackgroundColor="@color/black"
                    app:cardElevation="@dimen/px_4.0_dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:weightSum="1"
                        android:orientation="vertical">




                        <LinearLayout
                            android:id="@+id/covid_lyt"
                            android:visibility="visible"
                            android:orientation="vertical"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <FrameLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent">

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_gravity="center|start"
                                    android:gravity="center|start"
                                    android:layout_marginVertical="@dimen/px_10.0_dp"
                                    android:layout_marginHorizontal="@dimen/px_10.0_dp"
                                    android:orientation="vertical">

                                    <LinearLayout
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:orientation="horizontal">

                                        <TextView
                                            android:layout_width="@dimen/px_120.0_dp"
                                            android:layout_height="wrap_content"
                                            android:text="@string/state_name"
                                            android:fontFamily="@font/semibold"
                                            android:textSize="@dimen/px_18_sp"
                                            android:paddingHorizontal="@dimen/px_5.0_dp"
                                            android:textColor="@android:color/holo_orange_light"
                                            android:layout_marginHorizontal="@dimen/px_10.0_dp"
                                            android:layout_marginVertical="@dimen/px_4.0_dp" />

                                        <TextView
                                            android:id="@+id/state_name"
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:text=""
                                            android:fontFamily="@font/semibold"
                                            android:textSize="@dimen/px_18_sp"
                                            android:paddingHorizontal="@dimen/px_5.0_dp"
                                            android:textColor="@android:color/holo_orange_light"

                                            android:layout_marginHorizontal="@dimen/px_10.0_dp"
                                            android:layout_marginVertical="@dimen/px_4.0_dp" />

                                    </LinearLayout>

                                    <LinearLayout
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:orientation="horizontal">

                                        <TextView
                                            android:layout_width="@dimen/px_120.0_dp"
                                            android:layout_height="wrap_content"
                                            android:text="@string/confirmed"
                                            android:fontFamily="@font/semibold"
                                            android:textSize="@dimen/px_18_sp"
                                            android:paddingHorizontal="@dimen/px_5.0_dp"
                                            android:textColor="@android:color/holo_orange_light"
                                            android:layout_marginHorizontal="@dimen/px_10.0_dp"
                                            android:layout_marginVertical="@dimen/px_4.0_dp" />

                                        <TextView
                                            android:id="@+id/confirmed"
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:text=""
                                            android:fontFamily="@font/semibold"
                                            android:textSize="@dimen/px_18_sp"
                                            android:paddingHorizontal="@dimen/px_5.0_dp"
                                            android:textColor="@android:color/holo_orange_light"
                                            android:layout_marginHorizontal="@dimen/px_10.0_dp"
                                            android:layout_marginVertical="@dimen/px_4.0_dp" />

                                    </LinearLayout>

                                    <LinearLayout
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:visibility="gone"
                                        android:orientation="horizontal">

                                        <TextView
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:text="@string/active"
                                            android:fontFamily="@font/mazzardh_regular"
                                            android:padding="@dimen/px_5.0_dp"
                                            android:textColor="@android:color/holo_orange_light"
                                            android:textSize="@dimen/px_14_sp"
                                            android:layout_margin="@dimen/px_10.0_dp" />

                                        <TextView
                                            android:id="@+id/active_case"
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:text=""
                                            android:fontFamily="@font/mazzardh_regular"
                                            android:padding="@dimen/px_5.0_dp"
                                            android:textColor="@android:color/holo_orange_light"
                                            android:textSize="@dimen/px_14_sp"
                                            android:layout_margin="@dimen/px_10.0_dp" />

                                    </LinearLayout>

                                    <LinearLayout
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:orientation="horizontal">

                                        <TextView
                                            android:layout_width="@dimen/px_120.0_dp"
                                            android:layout_height="wrap_content"
                                            android:text="@string/recovered"
                                            android:fontFamily="@font/semibold"
                                            android:textSize="@dimen/px_18_sp"
                                            android:paddingHorizontal="@dimen/px_5.0_dp"
                                            android:textColor="@android:color/holo_orange_light"
                                            android:layout_marginHorizontal="@dimen/px_10.0_dp"
                                            android:layout_marginVertical="@dimen/px_4.0_dp" />

                                        <TextView
                                            android:id="@+id/recovered"
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:text=""
                                            android:fontFamily="@font/semibold"
                                            android:textSize="@dimen/px_18_sp"
                                            android:paddingHorizontal="@dimen/px_5.0_dp"
                                            android:textColor="@android:color/holo_orange_light"
                                            android:layout_marginHorizontal="@dimen/px_10.0_dp"
                                            android:layout_marginVertical="@dimen/px_4.0_dp" />

                                    </LinearLayout>

                                    <LinearLayout
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:orientation="horizontal">

                                        <TextView

                                            android:layout_width="@dimen/px_120.0_dp"
                                            android:layout_height="wrap_content"
                                            android:text="@string/deaths"
                                            android:fontFamily="@font/semibold"
                                            android:textSize="@dimen/px_18_sp"
                                            android:paddingHorizontal="@dimen/px_5.0_dp"
                                            android:textColor="@android:color/holo_orange_light"
                                            android:layout_marginHorizontal="@dimen/px_10.0_dp"
                                            android:layout_marginVertical="@dimen/px_4.0_dp" />

                                        <TextView
                                            android:id="@+id/deaths"
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:text=""
                                            android:fontFamily="@font/semibold"
                                            android:textSize="@dimen/px_18_sp"
                                            android:paddingHorizontal="@dimen/px_5.0_dp"
                                            android:textColor="@android:color/holo_orange_light"
                                            android:layout_marginHorizontal="@dimen/px_10.0_dp"
                                            android:layout_marginVertical="@dimen/px_4.0_dp" />

                                    </LinearLayout>

                                </LinearLayout>




                                <ImageView
                                    android:id="@+id/covid_mask_icon"
                                    android:layout_gravity="bottom|right"
                                    android:layout_marginBottom="@dimen/px_15.0_dp"
                                    android:layout_marginRight="@dimen/px_13.0_dp"
                                    android:layout_width="@dimen/px_80.0_dp"
                                    android:layout_height="@dimen/px_80.0_dp"
                                    android:src="@android:color/transparent"/>
                            </FrameLayout>

                        </LinearLayout>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
                

            </LinearLayout>

            </FrameLayout>
    </androidx.cardview.widget.CardView>
    
   

</LinearLayout>